@@ -1,4 +1,4 @@
-/*	Copyright (C) 1997 Free Software Foundation, Inc.
+/*	Copyright (C) 1997, 1998 Free Software Foundation, Inc.
  * 
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
